force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/Apttus_Config2__ApplicationSetting__c.object-meta.xml
<CustomObject>
    <description>Object to contain metadata about application settings</description>
    <label>Application Setting</label>
    <nameField>
        <label>Application Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>