force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__CustomSettingName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomSettingName__c</fullName>
    <description>API Name of the Custom Setting which contains the setting associated with this record</description>
    <inlineHelpText>API Name of the Custom Setting which contains the setting associated with this record</inlineHelpText>
    <label>Custom Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>