force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__DataType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DataType__c</fullName>
    <description>The type of field in application setting</description>
    <inlineHelpText>The type of field in application setting</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>