force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultValue__c</fullName>
    <description>Field to specify default value for this setting</description>
    <inlineHelpText>Field to specify default value for this setting</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>