force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__ExternalSettingGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExternalSettingGroupId__c</fullName>
    <description>External Id pointing to the SettingGroup__c original parent record</description>
    <inlineHelpText>External Id pointing to the SettingGroup__c original parent record</inlineHelpText>
    <label>ExternalSettingGroupId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>