force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldLabel__c</fullName>
    <description>The label of the application setting</description>
    <inlineHelpText>The label of the application setting</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>