force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldName__c</fullName>
    <description>Field to contain the Field Name from the associated Custom Setting</description>
    <inlineHelpText>Field to contain the Field Name from the associated Custom Setting</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>