force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__FieldPrecision__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldPrecision__c</fullName>
    <label>Field Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>