force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__HelpLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HelpLink__c</fullName>
    <description>The URL accompanying the custom setting for more information</description>
    <inlineHelpText>The URL accompanying the custom setting for more information</inlineHelpText>
    <label>Help Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>