force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__HelpText__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HelpText__c</fullName>
    <description>The help text accompanying the custom setting</description>
    <inlineHelpText>The help text accompanying the custom setting</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>