force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__IsPicklist__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to specify whether the referenced setting is to be displayed as a picklist</description>
    <inlineHelpText>Field to specify whether the referenced setting is to be displayed as a picklist</inlineHelpText>
    <label>Is Picklist</label>
    <type>Checkbox</type>
</CustomField>