force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__ObjectNameForPicklistOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ObjectNameForPicklistOptions__c</fullName>
    <description>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</description>
    <inlineHelpText>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</inlineHelpText>
    <label>Object Name For Picklist Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>