force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__RecordKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RecordKey__c</fullName>
    <description>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</description>
    <inlineHelpText>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</inlineHelpText>
    <label>Record Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>