force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__SettingGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SettingGroupId__c</fullName>
    <description>Parent group of this setting</description>
    <inlineHelpText>Parent group of this setting</inlineHelpText>
    <label>Setting Group</label>
    <referenceTo>Apttus_Config2__SettingGroup__c</referenceTo>
    <relationshipLabel>ApplicationSettings</relationshipLabel>
    <relationshipName>ApplicationSettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>