force-app/main/default/objects/Apttus_Config2__ApplicationSetting__c/fields/Apttus_Config2__StaticPicklistOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StaticPicklistOptions__c</fullName>
    <description>Field to contain a comma-separated list of available options if the setting is a picklist</description>
    <inlineHelpText>Field to contain a comma-separated list of available options if the setting is a picklist</inlineHelpText>
    <label>Static Picklist Options</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>